--- a/package.json
+++ b/package.json
@@ -19,11 +19,11 @@
     "fb": "^2.0.0",
     "glob": "^6.0.4",
     "jade": "^1.11.0",
+    "meta-extractor": "^1.2.0",
     "method-override": "^2.3.0",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "node-schedule": "^1.2.5",
-    "open-graph-scraper": "^3.1.4",
     "request": "^2.81.0",
     "serve-favicon": "^2.3.0"
   },
