--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "jade": "^1.11.0",
     "meta-extractor": "^1.2.0",
     "method-override": "^2.3.0",
+    "moment": "^2.20.1",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "node-schedule": "^1.2.5",
