--- a/package.json
+++ b/package.json
@@ -19,12 +19,14 @@
     "fb": "^2.0.0",
     "glob": "^6.0.4",
     "jade": "^1.11.0",
+    "limax": "^1.5.0",
     "meta-extractor": "^1.2.0",
     "method-override": "^2.3.0",
     "moment": "^2.20.1",
     "mongoose": "^4.1.2",
     "morgan": "^1.6.1",
     "node-schedule": "^1.2.5",
+    "node-webshot": "^1.0.2",
     "request": "^2.81.0",
     "serve-favicon": "^2.3.0"
   },
