--- a/package.json
+++ b/package.json
@@ -19,7 +19,6 @@
     "fb": "^2.0.0",
     "glob": "^6.0.4",
     "jade": "^1.11.0",
-    "limax": "^1.5.0",
     "meta-extractor": "^1.2.0",
     "method-override": "^2.3.0",
     "moment": "^2.20.1",
@@ -28,7 +27,8 @@
     "node-schedule": "^1.2.5",
     "node-webshot": "^1.0.2",
     "request": "^2.81.0",
-    "serve-favicon": "^2.3.0"
+    "serve-favicon": "^2.3.0",
+    "slug": "^0.9.1"
   },
   "devDependencies": {
     "chai": "^3.5.0",
