--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "body-parser": "^1.13.3",
     "compression": "^1.5.2",
     "cookie-parser": "^1.3.3",
+    "dominant-color": "0.0.1",
     "express": "^4.13.3",
     "fb": "^2.0.0",
     "glob": "^6.0.4",
@@ -26,6 +27,7 @@
     "morgan": "^1.6.1",
     "node-schedule": "^1.2.5",
     "node-webshot": "^1.0.2",
+    "os": "^0.1.1",
     "request": "^2.81.0",
     "serve-favicon": "^2.3.0",
     "slug": "^0.9.1"
