--- a/package.json
+++ b/package.json
@@ -37,10 +37,14 @@
     "chai": "^3.5.0",
     "debug": "^2.2.0",
     "gulp": "^3.9.0",
-    "gulp-ruby-sass": "^2.0.1",
-    "gulp-nodemon": "^2.0.2",
+    "gulp-concat": "^2.6.1",
+    "gulp-jshint": "^2.0.4",
     "gulp-livereload": "^3.8.0",
+    "gulp-nodemon": "^2.0.2",
     "gulp-plumber": "^1.0.0",
+    "gulp-rename": "^1.2.2",
+    "gulp-ruby-sass": "^2.0.1",
+    "gulp-uglify": "^3.0.0",
     "mocha": "^3.0.2",
     "nyc": "^10.0.0",
     "supertest": "^2.0.0"
